# cpp-starter

./: .editorconfig  .gitignore  CMakeLists.txt  CMakePresets.json  Makefile  constant.h  logger.h  main.cpp  readme.md  restapi.json  vcpkg.json
api/: host.cpp  host.h
models/: project.h  task.h  user.h
util/: config.h  constant.h  logger.cpp  logger.h
